@@ -1,3 +1,8 @@
+2013-01-09  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>
+
+	* config/pa/pa.c (pa_emit_move_sequence): Replace calls to gen_insv
+	with calls to gen_insvsi/gen_insvdi.
+
 2013-01-09  Venkataramanan Kumar  <venkataramanan.kumar@amd.com>
 
 	* config/i386/i386.c (initial_ix86_tune_features): Set up
